[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Items/tnt.png" type="Texture" id=1]
[ext_resource path="res://Resorces/Kinematic/Items/TnT.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 6 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.0123457, 1 )
colors = PoolColorArray( 0.259259, 0.259259, 0.259259, 1, 0.992188, 1, 0, 1, 1, 1, 1, 0 )

[node name="TnT" type="RigidBody2D"]
collision_layer = 8
collision_mask = 30
mode = 2
gravity_scale = 3.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.35, 0.35 )
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -10 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="OnFloor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnFloor"]
shape = SubResource( 2 )

[node name="KillTimer" type="Timer" parent="."]
one_shot = true

[node name="Particles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, -4 )
rotation = 0.610865
lifetime = 0.5
randomness = 0.21
local_coords = false
emission_shape = 1
emission_sphere_radius = 1.0
angle = 60.0
color_ramp = SubResource( 3 )
[connection signal="body_entered" from="OnFloor" to="." method="_on_OnFloor_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
